<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_home"
        android:icon="@drawable/home_icon"
        android:title="@string/home_title" />


    <item
        android:id="@+id/item_profile"
        android:icon="@drawable/user_icon"
        android:title="@string/profile_title" />

    <item
        android:id="@+id/item_info"
        android:icon="@drawable/about_icon"
        android:title="@string/details_title" />

    <item
        android:id="@+id/item_tips"
        android:icon="@drawable/tips_icon"
        android:title="@string/tips_title" />

    <item
        android:id="@+id/item_logout"
        android:icon="@drawable/logout_icon"
        android:title="@string/logout_title" />

</menu>